--- a/cal.html
+++ b/cal.html
@@ -1,62 +1,89 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Calculator</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <div class="calc">Calculator</div>
-        <table>
-            <tr>
-                <td colspan = "3"> <input type="text" id="result" class="ans"></td>
-                <td><input type="button" id="btn" value="c" onclick="clr()"></td>
-                
-            </tr>
-            <tr>
-                <td><input type="button" id="btn" value="1" onclick="display('1')"></td>
-                <td><input type="button" id="btn"value="2" onclick="display('2')"></td>
-                <td><input type="button" id="btn" value="3" onclick="display('3')"></td>
-                <td><input type="button" id="btn" value="/" onclick="display('/')"></td>
-            </tr>
-            <tr>
-                <td><input type="button" id="btn" value="4" onclick="display('4')"></td>
-                <td><input type="button" id="btn" value="5" onclick="display('5')"></td>
-                <td><input type="button" id="btn" value="6" onclick="display('6')"></td>
-                <td><input type="button" id="btn" value="-" onclick="display('-')"></td>
-            </tr>
-            <tr>
-                <td><input type="button" id="btn" value="7" onclick="display('7')"></td>
-                <td><input type="button" id="btn" value="8" onclick="display('8')"></td>
-                <td><input type="button" id="btn" value="9" onclick="display('9')"></td>
-                <td><input type="button" id="btn" value="+" onclick="display('+')"></td>
-            </tr>
-            <tr>
-                <td><input type="button" id="btn" value="." onclick="display('.')"></td>
-                <td><input type="button" id="btn" value="0" onclick="display('0')"></td>
-                <td><input type="button" id="btn" value="=" onclick="equate()"></td>
-                <td><input type="button" id="btn" value="*" onclick="display('*')"></td>
-            </tr>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Calculator</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="calc">Calculator</div>
+    <table>
+      <tr>
+        <td colspan="3"><input type="text" id="result" class="ans" /></td>
+        <td><input type="button" id="btn" value="c" onclick="clr()" /></td>
+      </tr>
+      <tr>
+        <td>
+          <input type="button" id="btn" value="1" onclick="display('1')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="2" onclick="display('2')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="3" onclick="display('3')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="/" onclick="display('/')" />
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <input type="button" id="btn" value="4" onclick="display('4')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="5" onclick="display('5')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="6" onclick="display('6')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="-" onclick="display('-')" />
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <input type="button" id="btn" value="7" onclick="display('7')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="8" onclick="display('8')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="9" onclick="display('9')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="+" onclick="display('+')" />
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <input type="button" id="btn" value="." onclick="display('.')" />
+        </td>
+        <td>
+          <input type="button" id="btn" value="0" onclick="display('0')" />
+        </td>
+        <td><input type="button" id="btn" value="=" onclick="equate()" /></td>
+        <td>
+          <input type="button" id="btn" value="*" onclick="display('*')" />
+        </td>
+      </tr>
+    </table>
 
-        </table>
-        
-        <script>
-            function clr(){
-                document.getElementById("result").value = "";
-
-            }
-            function display(val){
-                document.getElementById("result").value+=val;
-            }
-            function equate(){
-                let x = document.getElementById("result").value
-                let y = eval(x)
-                document.getElementById("result").value = y;
-            }
-        </script>
-    </body>
+    <script>
+      function clr() {
+        document.getElementById("result").value = ""; //this func clears the display since its value is set as an empty string
+      }
+      function display(val) {
+        document.getElementById("result").value += val; // this func takes the current content inside the display box and add new value to it or a sign
+      }
+      function equate() {
+        let x = document.getElementById("result").value; // this func evaluates yhe values on the screen and the displays the result
+        let y = eval(x);
+        document.getElementById("result").value = y;
+      }
+    </script>
+  </body>
 </html>
