--- a/cal.html
+++ b/cal.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <div class="calc">Calculator</div>
